Changed code so that it fails