@@ -5,6 +5,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.*;
 
@@ -12,11 +13,12 @@ public class MarkdownParseTest {
 
     @Test
     public void getLinks() throws IOException {
-        List<Path> mdFiles = Files.walk(Path.of("")).filter(f -> f.toString().endsWith(".md") && f.toString().startsWith("test-file")).sorted().toList();
+        List<Path> mdFiles = Files.walk(Path.of("")).filter(f -> f.toString().endsWith(".md") && f.toString().startsWith("test-file")).sorted().collect(Collectors.toList());
+        System.out.println(mdFiles);
         ArrayList[] expectedResults = new ArrayList[]{
                 new ArrayList<>(List.of("https://something.com", "some-page.html")),
-                new ArrayList<>(List.of("https://www.google.com")),
                 new ArrayList<>(List.of("https://something.com", "some-page.html")),
+                new ArrayList<>(),
                 new ArrayList<>(),
                 new ArrayList<>(),
                 new ArrayList<>(),
